--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "CI= react-scripts build"
   },
   "dependencies": {
     "react": "^18.2.0",
