--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "CI= react-scripts build"
+    "build": "CI= react-scripts build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
